project2/spl-spec/my_test/test_11912013_03.out
Error type 14 at Line 12: accessing an undefined structure member.
Error type 1 at Line 13: variable is used without a definition.
Error type 5 at Line 14: the type of the operands at both sides of assignment operator should match.
Error type 14 at Line 16: accessing an undefined structure member.
