project2/spl-spec/my_test/test_11912013_03.spl
struct mystruct {
    int a;
    int b;
    int c;
    char d;
    char e;
    char f;
};
int test_11912013_03 () {
    struct mystruct m;
    int t1 = m.a;
    int t2 = m.g;
    int t3 = n.d;
    char t4 = m.b;
    char t5 = m.d;
    char t6 = m.t;
    return 1;
}